[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
        .container{
            max-width:800px; 
            margin: 0 auto;
-           color:yellow;
+           color:red;
            font-family:sans-serif;
            
        }
