--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,10 +7,14 @@
 
    <style>
        .container{
-           max-width:800px; 
-           margin: 0 auto;
-           color:grey;
-           font-family:sans-serif;
+              max-width: 800px;
+              margin: 0 auto;
+              color: black;
+              font-family: sans-serif;
+              padding-top: 60px;
+              padding-left: 20px;
+              padding-right: 20px;
+}
            
        }
        
