--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,6 +4,8 @@
      
       article third i yashwant kumar
 </title>
+      <meta name="viewport" content="width=device-width,initial-scale=1"/>
+      <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 <body>
