[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,7 +3,9 @@
      <title>
           article TWO I yashwant kumar
       </title>
-        <meta name="viewport" content="width",initial-scale=1"/>
+       
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 <body>
