[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I Yashwanth kumar, and this my first web app.
         </div>
+        <script>
+        alert('Hi i am javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
